src/sass/7-components/_editabletable.scss
@import '../vars';
@import '../mixins';

$xui-editabletable-shadow-size: $xui-s-standard;
$xui-editabletable-shadowcover-size: $xui-s-3xlarge;

@mixin xui-editabletablecell {
  @include xui-shadow-border-all($xui-standard-border-color);
  height: $xui-minimum-touch-target;
  padding: 0px;
  vertical-align: top;
}

// Container shadow overlay based on https://codepen.io/evank/pen/wWbRNO
.#{$ns}-editabletable {
  background: /* Shadow covers */ linear-gradient(
      90deg,
      $xui-color-white 30%,
      rgba($xui-color-white, 0)
    ),
    linear-gradient(90deg, rgba($xui-color-white, 0), $xui-color-white 70%) 100% 0,
    /* Shadows */
      linear-gradient(90deg, rgba($xui-color-black, 0.2) 0%, rgba($xui-color-black, 0) 100%),
    linear-gradient(270deg, rgba($xui-color-black, 0.2) 0%, rgba($xui-color-black, 0) 100%) 100% 0;
  background-attachment: local, local, scroll, scroll;
  background-color: $xui-editabletable-bg-color;
  background-repeat: no-repeat;
  background-size: $xui-editabletable-shadowcover-size 100%,
    $xui-editabletable-shadowcover-size 100%, $xui-editabletable-shadow-size 100%,
    $xui-editabletable-shadow-size 100%;
  border-radius: $xui-radius;
  box-shadow: 0 0 0 1px $xui-standard-border-color inset;
  display: block;
  overflow-x: auto;
}

// The portal focus ring is put under this div and need a position: relative for portal to locate
.#{$ns}-editabletable--wrapper {
  position: relative;
}

.#{$ns}-editabletable--table {
  border-collapse: separate;
  border-spacing: 1px;
  // These properties are key to give implementers explicit control over column widths.
  // If no widths are specified, columns will default to being equal width.
  table-layout: fixed;
  width: 100%;
}

.#{$ns}-editabletable--caption {
  @include xui-utility-hidden-visually;
}

.#{$ns}-editabletablehead,
.#{$ns}-editabletablefoot {
  @include xui-heading-small;
  background-color: $xui-editabletablehead-bg-color;

  .#{$ns}-editabletablecell:not(:last-child),
  .#{$ns}-editabletableheadingcell:not(:last-child) {
    @include xui-shadow-border-right($xui-editabletablehead-bg-color);
  }
}

/**
 * Required for drag and drop.
 *
 * Without this there will be a missing border between the head and the body when the first row is
 * dragged, and the foot and the body when the last row is dragged.
 *
 * We set the spread-radius to -1px so the box shadow does not overlap with the borders on the side
 * of the table.
 *
 * The offset-y of 2px/-2px does 2 things. 1px is to move the box shadow so it only shows on one
 * edge of the row. The other 1px is to compensate for the negative spread-radius.
 */
.#{$ns}-editabletablehead .#{$ns}-editabletablerow {
  box-shadow: 0 2px 0 -1px $xui-standard-shadow-color;
}
.#{$ns}-editabletablefoot .#{$ns}-editabletablerow {
  box-shadow: 0 -2px 0 -1px $xui-standard-shadow-color;
}

.#{$ns}-editabletableheadingcell {
  height: $xui-minimum-touch-target;
  padding-left: $xui-s-standard;
  padding-right: $xui-s-standard;
}

.#{$ns}-editabletableheadingcell-leftaligned {
  text-align: left;
}

.#{$ns}-editabletablecell {
  @include xui-editabletablecell;
}

.#{$ns}-editabletablecelliconbutton {
  width: $xui-icon-large;
}

.#{$ns}-editabletablecellreadonly {
  @include xui-padding-vertical($xui-s-xsmall - 1px); // xsmall, minus a 1px border
  @include xui-padding-horizontal($xui-s-standard);
}

.#{$ns}-editabletablecellselectbox {
  .#{$ns}-select--button {
    @include xui-padding-vertical($xui-s-xsmall - 1px); // xsmall, minus a 1px border
    display: block;
    position: relative;
  }
  .#{$ns}-select--content {
    display: block;
    line-height: $xui-line-height-standard;
    padding-right: $xui-s-standard;
  }
  .#{$ns}-select--caret {
    position: absolute;
    right: $xui-s-standard;
    top: $xui-s-standard;
  }
}

@mixin xui-editabletablecell-control {
  .#{$ns}-editabletablecell--border {
    height: 100%;
    position: relative;
  }

  // Hover
  &:hover {
    &:not(.#{$ns}-editabletablecell-control-is-invalid):not(.#{$ns}-editabletablecell-control-is-disabled) {
      .#{$ns}-editabletablecell--border {
        box-shadow: $xui-shadow-border-all;
      }
    }
  }

  // Invalid
  &-is-invalid {
    .#{$ns}-editabletablecell--border {
      @include xui-shadow-border-all($xui-textinput-invalid-border-color);
      z-index: $xui-z-index-focus + 1;
    }
  }

  // Disabled
  &-is-disabled {
    @include xui-disabled-form-control;
  }
}

.#{$ns}-editabletablecell-control {
  @include xui-editabletablecell-control;

  // Cursors
  &:not(.#{$ns}-editabletablecell-control-is-disabled) {
    &.#{$ns}-editabletablecellautocompleter,
    &.#{$ns}-editabletablecelltextinput {
      cursor: text;
    }

    &.#{$ns}-editabletablecellselectbox {
      cursor: pointer;
    }
  }
}

.#{$ns}-editabletablecell--validation {
  @include xui-text-xsmall;
  color: $xui-validation-color;
  padding: 0 $xui-s-standard $xui-s-xsmall;
  // Fix for Safari's disabled inputs overriding `color`.
  -webkit-text-fill-color: currentColor;
}

.#{$ns}-editabletablecell--validation-is-invalid {
  color: $xui-validation-invalid-color;
}

// These styles are for the portal focus ring
.#{$ns}-editabletable--portalfocus {
  pointer-events: none;
  position: absolute;
  @include xui-state-focus-shadow;
  .#{$ns}-editabletable--portalfocus--border {
    box-shadow: $xui-shadow-border-all;
    height: 100%;
  }
  // When the horizontal sides of the focused cell are covered, clip the right-side shadow
  &.#{$ns}-editabletable--portalfocus-horizontalCovered {
    clip-path: inset(-3px 0px -3px 0);
    .#{$ns}-editabletable--portalfocus--border {
      clip-path: inset(-1px 0px -1px 0);
    }
  }
  // When the right side of the focused cell is covered, clip the right-side shadow
  &.#{$ns}-editabletable--portalfocus-rightCovered {
    clip-path: inset(-3px 0px -3px -3px);
    .#{$ns}-editabletable--portalfocus--border {
      clip-path: inset(-1px 0px -1px -1px);
    }
  }
  // When the left side of the focused cell is covered, clip the left-side shadow
  &.#{$ns}-editabletable--portalfocus-leftCovered {
    clip-path: inset(-3px -3px -3px 0px);
    .#{$ns}-editabletable--portalfocus--border {
      clip-path: inset(-1px -1px -1px 0px);
    }
  }
}

